Updated homeController, TenantAccess and deleteTenant.html according to removing tenant

--- a/src/main/resources/templates/deleteTenant.html
+++ b/src/main/resources/templates/deleteTenant.html
@@ -38,6 +38,8 @@
                 </option>
             </select>
         </div>
+
+        <input type="submit" value="Remove Tenant">
         
     </form>
 
