Connected spring to database | configured login using thymeleaf | logging in works, but an issue with cookies - preventing subsequent logging

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,12 +8,12 @@
 <body>
     <div class="utilityButtons">
         <div class="addTenant">
-            <form action="addTenant.html">
+            <form action="addTenant">
                 <input type="submit" value="Add Tenant">
             </form>
         </div>
         <div>
-            <form action="deleteTenant.html">
+            <form action="deleteTenant">
                 <input type="submit" value="Remove Tenant">
             </form>
         </div>
