Logout button added

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -49,5 +49,11 @@
             <td th:text="${tenant.phoneNo}"></td>
         </tr>
     </div>>
+    <div id="logout">
+        <form th:action="@{/logout}" method="post">
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" >
+            <input type="submit" value="Logout">
+        </form>
+    </div>
 </body>
 </html>
